# DelphiHawkes

./: eval_compare.py  pyproject.toml  train.py  visualize_hawkes.ipynb  visualize_kernel_interactions.py  visualize_poisson_intensities.py
data/ukb_simulated_data/: inspect_data.ipynb  rebatch_expansion.ipynb
hawkes/: Hawkes.py  debug_numerical_tpp.py  event_utils.py  fit_hawkes_ukb.py  fit_hawkes_ukb_batched.py  fit_ippp_uk_batched.py  fit_poisson_ukb_batched.py  fit_splinepp_uk_batched copy.py  fit_tpps_ukb.py  hawkes_jax.py  hawkes_self.py  hawkes_speed_comparison.py  hawkes_torch.py  inspect_ukb_data.py  plot_exphawkes_analysis.py  test_exphawkes.py  test_hawkes_torch.py  test_mv_hawkes_torch.py  tpp_unit_tests.py  ukb_loading.py  utils.py
hawkes/hawkes/: Hawkes.py  Hawkes_TPP.py  baseline.py  baseline_tpps.py  evaluation.py  event_utils.py  hawkes_tpp.py  tpps.py  ukb_loading.py  utils.py
hawkes/old/: Hawkes.py  hawkes_test.ipynb
