[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project]
name = "delphi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "jaxtyping>=0.3.3",
    "lovely-tensors>=0.1.20",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "nflows>=0.14",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.5",
    "tensordict>=0.10.0",
    "torch>=2.3.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.22.2",
]

